<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/labelCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_Correo"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:ems="10"
        android:hint="@string/hint_Correo"
        android:inputType="textEmailAddress"
        android:text="omar-alexis40@hotmail.com"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/labelContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_Contraseña"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:ems="10"
        android:hint="@string/hint_Contraseña"
        android:inputType="textPassword"
        android:text="Oalopez123"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/btn_Login"
        android:textSize="34sp" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/btn_Registrar"
        android:textSize="34sp" />
</LinearLayout>