<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ChangePass">

    <TextView
        android:id="@+id/labelChangePasstittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/label_ChangePass"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="42sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/labelChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_Contraseña"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/labellChangeEditPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_Confirmar_password"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ActualizarPass"
        android:textAlignment="center"
        android:textSize="36sp" />
</LinearLayout>