<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:text="@string/label_datos"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/labelEditNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_Nombre"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtEditNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/labelEditCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_Correo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtEditCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_actualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Actualizar"
        android:textAlignment="center"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="280dp" />

</LinearLayout>